# lagrange_point_orbit_simulator

./: .gitignore  .pylintrc  .sourcery.yaml  README.md  build.bat  build.sh  make-app.bat  make-app.sh  mypy.ini  pyproject.toml  requirements-dev.txt  requirements-gui.txt  requirements.txt  start-gui-app.sh  start-gui-build.bat  start-gui-script.bat  start-gui-script.sh  start-gui-source.bat  start-gui-source.sh  start_gui.bat  update-requirements.sh
.github/workflows/: release.yml  update-requirements.yml
lagrangegui/: make_app.bat
lagrangepointgui/: orbit_plotter.py  safe_eval.py  sim_gui.py
lagrangepointsimulator/: numba_funcs.py  perf_test.py  profile_simulation.py  sim_types.py
simulation/: __init__.py
simulation/constants/: constants.py
simulation/simgui/: __init__.py  orbit_plotter.py  safe_eval.py  sim_gui.py
simulation/simulation/: __init__.py  descriptors.py  numba_funcs.py  profile_simulation.py  sim_types.py  simulation.py
simulation/simulator/: descriptors.py  numba_funcs.py  perf_test.py  profile_simulation.py  simulator.py
simulator_gui/: orbit_plotter.py  sim_gui.py
src/lagrangepointgui/: __init__.py  default_presets.toml  orbit_plotter.py  presets.py  safe_eval.py  sim_gui.py
src/lagrangepointsimulator/: __init__.py  constants.py  descriptors.py  numba_funcs.py  perf_test.py  profile_simulation.py  sim_types.py  simulator.py
