[tool.poetry]
name = "lagrangepointsimulator"
version = "0.1.0"
description = "Simulates orbits near Lagrange Points"
authors = ["Moussa Mikhail <moussamikhail56@gmail.com>"]
license = "GPL3"
readme = "README.md"
repository = "https://github.com/Moussa-Mikhail/lagrange_point_orbit_simulator"
keywords = ["lagrange point", "orbit", "simulation", "physics", "gui"]
classifiers = ["Topic :: Scientific/Engineering :: Physics", "Topic :: Scientific/Engineering :: Visualization", "Topic :: Scientific/Engineering :: Astronomy"]
packages = [
	{ include = "src/lagrangepointsimulator" },
	{ include = "src/lagrangepointgui"}
]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
validateddescriptor = {git = "https://github.com/Moussa-Mikhail/validated-descriptor.git", rev = "main"}
numpy = ">=1.23.4"
numba = ">=0.56.3"

[tool.poetry.group.dev.dependencies]
pylint = ">2.15.4"
flake8-comprehensions = ">=3.8.0"
flake8-bugbear = ">=22.3.23"
flake8 = ">=6.0.0"
mypy = ">=0.991"
black = ">=22.12.0"

[tool.poetry.group.gui]
optional = true

[tool.poetry.group.gui.dependencies]
pyqt6 = ">=6.4.0"
pyqtgraph = ">=0.13.1"


[tool.poetry.group.build.dependencies]
pyinstaller = ">=5.11.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Enable flake8-bugbear (`B`) rules.
select = ["E", "F", "B"]

# Never enforce `E501` (line length violations).
ignore = ["E501"]

# Ignore `E402` (import violations) in all `__init__.py` files, and in `path/to/file.py`.
[tool.ruff.per-file-ignores]
"__init__.py" = ["E402", "F401"]
