[tool.poetry]
name = "lagrangepointsimulator"
version = "0.1.0"
description = "Simulates orbits near Lagrange Points"
authors = ["Moussa Mikhail <moussamikhail56@gmail.com>"]
license = "GPL3"
readme = "README.md"
repository = "https://github.com/Moussa-Mikhail/lagrange_point_orbit_simulator"
keywords = ["lagrange point", "orbit", "simulation", "physics", "gui"]
classifiers = ["Topic :: Scientific/Engineering :: Physics", "Topic :: Scientific/Engineering :: Visualization", "Topic :: Scientific/Engineering :: Astronomy"]
packages = [
    { include = "src/lagrangepointsimulator" },
    { include = "src/lagrangepointgui"}
]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
validateddescriptor = {git = "https://github.com/Moussa-Mikhail/validated-descriptor.git", rev = "main"}
numpy = ">=1.23.4"
numba = ">=0.56.3"
tomli = { version = ">=2.0.1", python = "<3.11", optional = true }
pyqt6 = { version = ">=6.4.0", optional = true }
pyqtgraph = { version = ">=0.13.1", optional = true }

[tool.poetry.group.dev.dependencies]
mypy = ">=0.991"
black = ">=22.12.0"
ruff = ">=0.0.272"

[tool.poetry.group.build.dependencies]
pyinstaller = ">=5.11.0"

[tool.poetry.extras]
gui = ["pyqt6", "pyqtgraph", "tomli"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Enable flake8-bugbear (`B`) rules.
select = ["E", "F", "B"]

# Never enforce `E501` (line length violations).
ignore = ["E501"]

# Ignore `E402` (import violations) in all `__init__.py` files.
[tool.ruff.per-file-ignores]
"__init__.py" = ["E402", "F401"]

# Don't autofix unused variables
unfixable = ["F841"]

[tool.mypy]
disallow_untyped_defs = true
exclude = ["dist"]

[tool.black]
line-length = 120