[tool.poetry]
name = "lagrangepointsimulator"
version = "0.1.0"
description = "Simulates orbits near Lagrange Points"
authors = ["Moussa Mikhail <moussamikhail56@gmail.com>"]
license = "GPL3"
readme = "README.md"
repository = "https://github.com/Moussa-Mikhail/lagrange_point_orbit_simulator"
keywords = ["lagrange point", "orbit", "simulation", "physics", "gui", "astronomy"]
classifiers = ["Topic :: Scientific/Engineering :: Physics", "Topic :: Scientific/Engineering :: Visualization", "Topic :: Scientific/Engineering :: Astronomy"]
packages = [
    { include = "src/lagrangepointsimulator" },
    { include = "src/lagrangepointgui"}
]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
validateddescriptor = {git = "https://github.com/Moussa-Mikhail/validated-descriptor.git", rev = "main"}
numpy = ">=1.23.4"
numba = ">=0.56.3"

pyqt6 = { version = ">=6.4.0", optional = true }
pyqtgraph = { version = ">=0.13.1", optional = true }

[tool.poetry.extras]
gui = ["pyqt6", "pyqtgraph"]

[tool.poetry.group.dev.dependencies]
mypy = ">=0.991"
black = ">=22.12.0"
ruff = ">=0.0.272"
sourcery = ">=1.8.0"

[tool.poetry.group.build.dependencies]
pyinstaller = ">=5.11.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = ["ALL"]

ignore = ["ANN101", "D", "PGH003", "FBT003", "TD002", "TD003", "FIX002", "PLR0913", "T201", "S307", "PGH001", "COM812"]

line-length = 120

target-version = "py310"

# Ignore `E402` (import violations) in all `__init__.py` files.
[tool.ruff.per-file-ignores]
"__init__.py" = ["E402", "F401"]

# Don't autofix unused variables
unfixable = ["F841"]

[tool.mypy]
disallow_untyped_defs = true
exclude = ["dist"]

[tool.black]
line-length = 120